2007-08-07  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (copy_from_file): Fix potential segfault, found by Paul
	Goins, after uncutting one line of text with the mark on by
	properly preserving the beginning of the mark.
	* nano.c (copy_from_file): Make sure the mark is always properly
	positioned after uncutting one line of text with the mark on.

2007-08-01  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (version): Display copyright notices.

2007-07-31  David Lawrence Ramsey  <pooka109@gmail.com>

	* configure.ac: Update copyright notice to account for
	modifications.

2007-07-29  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/faq.html: Update RPM links for nano 2.0.x.

2007-07-11  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (copy_file): Assert that inn and out don't both point
	to the same file.

2007-07-10  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): Simplify and rewrite to use the strncasecmp()
	equivalents.

2007-07-09  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): Fix typo that broke the check for needle's
	being blank.
	* chars.c (mbstrncasecmp, mbstrnlen, mbstrpbrk,
	has_blank_mbchars): Simplify by using for loops instead of while
	loops where possible, to match the single-byte versions of these
	functions.
	* search.c (do_replace_loop): Fix problem where replacing e.g.
	single-byte characters with multibyte ones could result in
	openfile->totsize's being miscalculated.

2007-07-06  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): Return char* instead of const char*.

2007-07-02  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): For efficiency, return haystack/rev_start